# SNANA

./: #test14.MUDIF.cospar#  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  RUNTEST_wCDM  RUN_Ayan_snana  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  out_wfit_priorOM_new.cospar  out_wfit_priorOM_old.cospar  run_autotools+make.sh  sys_0.txt  test  test.MUDIF  test.MUDIF.cospar  test10  test10.MUDIF  test10.MUDIF.cospar  test11  test11.MUDIF  test11.MUDIF.cospar  test12  test12.MUDIF  test12.MUDIF.cospar  test13  test13.MUDIF  test13.MUDIF.cospar  test14  test14.MUDIF  test14.MUDIF.cospar  test15  test15.MUDIF  test15.MUDIF.cospar  test16  (+7 more)
.github/: CODEOWNERS
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Fig_hostgal_noise.ps  MAKE_SNANA_INSTALL  MAKE_SNANA_MANUAL  README_UPDATES  snana_install.tex  snana_manual.aux  snana_manual.bbl  snana_manual.bib  snana_manual.blg  snana_manual.dvi  snana_manual.out  snana_manual.ps  snana_manual.tex  snana_manual.toc
eups/: snana.table
kumacs/: hpl.kumac  journal.kumac  overall.kumac  snana.kumac
src/: #snana.F90#  #snana.car#  #snlc_sim.c#  #sntools_zPDF_spline.c#  .#snana.car  DMP  MWgaldust.c  MWgaldust.h  Makefile  Makefile.am  Makefile.in  Makefile.legacy  Makefile_ORIG  RUNTEST_wCDM  SALT2mu.c  SIMSED_check.c  SIMSED_extractSpec.c  SIMSED_fudge.c  SIMSED_rebin.c  SNcadenceFoM.c  \  atmosphere_sim.c  cnpy.cpp  cnpy.h  combine_fitres.c  ctrlcom.mod  debug  earlycom.mod  eispack.c  eispack.h  fcasplit.F  filtcom.mod  filtercal_sim.c  filtupdcm.mod  fitscom.mod  genmag_ALL.h  genmag_BAYESN.c  genmag_BAYESN.h  genmag_BYOSED.c  genmag_BYOSED.h  (+199 more)
src/tempana/: snana.mkfca  snana.shfca
src/tempfit/: snlc_fit.mkfca  snlc_fit.shfca
tests/: test_invariant_plot_simlib_dump.py
ups/: snana.table
util/: #plot_snana.py#  HOSTLIB_randomizer.pl  NEARNBR_pipeline.pl  SALT2mu_fit.pl  SALT2train_biascorr.pl  SALT2train_extcolordisp.pl  SALT2train_incdata.pl  SALT2train_pipeline.pl  SALT2train_run.pl  SALT2train_translate.pl  SIMEFF_MAPGEN.pl  SNANA_CodeTests.py  SNANA_code_tests.py  SNANA_submit_tests.py  SNANA_tester.pl  SNLS_simlib_gen.pl  TRAIN_SIM.pl  backup_INTERNAL.pl  backup_SNANA_PUBLIC.pl  backup_SNDATA_ROOT.pl  backup_SNDATA_ROOT.py  backup_SNDATA_VERSION.pl  cat_sntable.py  check_create_covariance.py  cigale_translator.py  combine_dataVersions.py  convertSMP2snana.py  convert_SIMSED_to_NON1ASED.py  convert_snana_f77_to_f90.py  convertcsv2snana.pl  convertcsv2snana.py  convertsalt2snana.pl  convertsnana2salt2.pl  createCov.py  create_covariance.py  defineOutputFlags.pl  diskUsage_byOwner.pl  find_my_sim_folders.py  find_my_snana_folders.py  get_fitresValue.pl  (+58 more)
util/makeDataFiles/: makeDataFiles_base.py  makeDataFiles_main.py  makeDataFiles_params.py  makeDataFiles_util.py  read_data_des_folder.py  read_data_lsst_  read_data_lsst_ap.py  read_data_lsst_drp.py  read_data_lsst_fastdb.py  read_data_lsst_tom.py  read_data_sirah_folder.py  read_data_snana_folder.py  read_data_ztf.py  write_data_csv.py  write_data_lsst_alert.py  write_data_snana.py
util/submit_batch/: requirements.txt  submit_HELP.py  submit_batch_jobs.py  submit_makeDataFiles.py  submit_params.py  submit_prog_base.py  submit_prog_bbc.py  submit_prog_combine.py  submit_prog_cosmofit.py  submit_prog_covmat.py  submit_prog_fit.py  submit_prog_hostfit.py  submit_prog_lcfit.py  submit_prog_sim.py  submit_prog_smp.py  submit_prog_wfit.py  submit_train_BAYESN.py  submit_train_SALT2.py  submit_train_SALT3.py  submit_train_util.py  submit_translate.py  submit_util.py
